welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:52: error: not found: value faire_une_fleur
faire_une_fleur(Color.BLUE,Color.YELLOW);
^FlowerCase:66: error: not found: value faire_une_fleur
faire_une_fleur(Color.BLUE,Color.YELLOW);
^